--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,32 @@
+
 .App {
   text-align: center;
+}
+
+#home-header {
+  background-image: url("./images/bg_12.jpg");
+  background-size: cover;
+  height: 100vh;
+  position: relative;
+}
+
+#home-header::before {
+  background: #000;
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: .3;
+  z-index: 0;
+  overflow: hidden;
+}
+
+#motto {
+  color: white;
+  font-size: 5vw;
+  margin-top: 30%;
 }
 
 .App-logo {
