--- a/src/Pages/Gallery/Gallery.css
+++ b/src/Pages/Gallery/Gallery.css
@@ -35,8 +35,9 @@
     overflow: hidden;
 }
 
-img {
+.img-gallery {
     width: 100%;
+    height: 100%;
     position: relative;
     size: cover;
 }
