--- a/src/Pages/Members/Members.css
+++ b/src/Pages/Members/Members.css
@@ -1,1 +1,11 @@
 
+#page-title {
+    color: white;
+    margin-top: 30vh;
+    font-size: 4rem;
+}
+
+#page-intro {
+    color: white;
+    font-size: 1.5rem;
+}
