update home page

--- a/src/Components/navbar/Navbar.css
+++ b/src/Components/navbar/Navbar.css
@@ -1,5 +1,5 @@
 #navbar {
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.8);
     color: white;
 }
 
@@ -13,6 +13,13 @@
     color: white;
     float: right;
 }
+
+#nav-item:hover {
+    color: white;
+    background-color: #b54648;
+}
+
+
 
 @media only screen and (max-width: 700px) {
 
