--- a/src/Pages/Gallery/Gallery.css
+++ b/src/Pages/Gallery/Gallery.css
@@ -1,5 +1,8 @@
 #body {
     background-color: #b54648;
+    margin-top: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 #title {
@@ -20,6 +23,7 @@
     margin-bottom: 20px;
     justify-content: center;
     text-align: center;
+    margin-bottom: 0;
 }
 
 #gallery-header::before {
@@ -48,7 +52,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: yellow;
+    background-color: black;
     position: absolute;
     opacity: 0;
     z-index: 1;
