--- a/src/Components/navbar/Navbar.css
+++ b/src/Components/navbar/Navbar.css
@@ -9,14 +9,22 @@
     font-weight: 500;
 }
 
-#nav-item {
-    color: white;
-    float: right;
+a.nav-link {
+    color: white !important;
+    float: right !important;
 }
 
-#nav-item:hover {
+a.nav-link:hover {
     color: white;
     background-color: #b54648;
+}
+
+a.nav-link:after{
+    background-color: #b54648;
+}
+
+.active{
+    background-color: #b54648 !important;
 }
 
 
@@ -26,6 +34,35 @@
     #navbar {
         background-color: #b54648;
         color: white;
+    }
+
+    #nav-brand{
+        display:none;
+    }
+
+    #nav-brand-small{
+        font-weight:600 !important; 
+        color:white;
+    }
+
+    span.navbar-toggler-icon{
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    }
+
+    .navbar-toggler{
+        background-color: #b54648 !important;
+        border-color:white !important;
+        color:white !important;
+    }
+
+
+}
+
+@media only screen and (min-width: 700px) {
+
+
+    #nav-brand-small{
+        display:none;
     }
 
 
