--- a/src/Components/event-card/eventCard.css
+++ b/src/Components/event-card/eventCard.css
@@ -5,9 +5,10 @@ img {
 }
 
 .event-card{
-    width: 31%;
+    width: 100%;
     margin-left: 1%;
     margin-right: 1%;
+    margin-bottom: 30px;
     box-shadow: 1px 1px 5px gray;
     border-radius: 5px;
     background-color: #B54648;
