--- a/src/Pages/Gallery/Gallery.css
+++ b/src/Pages/Gallery/Gallery.css
@@ -16,8 +16,8 @@
 }
 
 #gallery-header {
-    background-image: url("../../images/bg_2.jpg");
-    height: 80vh;
+    background-image: url("../../images/Gallery/IMG_0687.jpg");
+    height: 100vh;
     position: relative;
     background-size: cover;
     margin-bottom: 20px;
