--- a/src/Pages/Members/Members.css
+++ b/src/Pages/Members/Members.css
@@ -13,3 +13,14 @@
 section {
     margin-bottom: 40px;
 }
+
+#members-header {
+    background-image: url("../../images/Gallery/DSC00859.jpg");
+    height: 100vh;
+    position: relative;
+    background-size: cover;
+    margin-bottom: 20px;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 0;
+}
